# SCALE3D

./: README.md  pyproject.toml
client/: __init__.py  api_client.py  app.py  background.py  file_browser.py  main_window.py  models.py  point_cloud_view.py  task_controller.py
server/: __init__.py  app.py  dispatcher.py  reporting.py  repository.py
shared/: __init__.py  enums.py  palette.py  paths.py  product_models.py  schemas.py  settings.py  validators.py
shared/product_models/: byme_36.json  modela_36.json
tests/: test_product_models.py  test_repository_and_reporting.py  test_validators.py
workers/: __init__.py  celery_app.py  geometry_adapter.py  pointcept_adapter.py  pointcept_external_runner.py  pointcloud_io.py  reconstruction_adapter.py  tasks.py
